# bug-reproduction-serialize-unit-value

./: Cargo.toml  flake.nix
dnas/demo/zomes/coordinator/posts/: Cargo.toml
dnas/demo/zomes/coordinator/posts/src/: lib.rs
dnas/demo/zomes/coordinator/posts/tests/: test.rs
