[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.0-beta-dev.13"
hdk = "=0.3.0-beta-dev.17"
serde = "=1.0.166"
holochain = { version = "=0.3.0-beta-dev.21", default-features = false, features = ["test_utils"] }

[workspace.dependencies.posts]
path = "dnas/demo/zomes/coordinator/posts"
